--- a/public/doctor.html
+++ b/public/doctor.html
@@ -620,27 +620,32 @@
               </div>
               <div class="swiper-slide diploms-slide">
                 <div class="diploms-slide-item">
-                  <img src="./images/diplom-1.jpg" alt="diplom">
+                  <img src="./images/diplom-3.jpg" alt="diplom">
                 </div> 
               </div>
               <div class="swiper-slide diploms-slide">
                 <div class="diploms-slide-item">
-                  <img src="./images/diplom-1.jpg" alt="diplom">
+                  <img src="./images/diplom-4.jpg" alt="diplom">
                 </div> 
               </div>
               <div class="swiper-slide diploms-slide">
                 <div class="diploms-slide-item">
-                  <img src="./images/diplom-1.jpg" alt="diplom">
+                  <img src="./images/diplom-5.jpg" alt="diplom">
                 </div> 
               </div>
               <div class="swiper-slide diploms-slide">
                 <div class="diploms-slide-item">
-                  <img src="./images/diplom-1.jpg" alt="diplom">
+                  <img src="./images/diplom-6.jpg" alt="diplom">
                 </div> 
               </div>
               <div class="swiper-slide diploms-slide">
                 <div class="diploms-slide-item">
-                  <img src="./images/diplom-1.jpg" alt="diplom">
+                  <img src="./images/diplom-7.jpg" alt="diplom">
+                </div>
+              </div>
+              <div class="swiper-slide diploms-slide">
+                <div class="diploms-slide-item">
+                  <img src="./images/diplom-8.jpg" alt="diplom">
                 </div>
               </div>
             </div>
