--- a/public/foreign.html
+++ b/public/foreign.html
@@ -909,10 +909,10 @@
                   </div>                   
                   <div class="service-price-sum">
                     <span class="service-price-currency">
-                      от 1030 EUR
+                      23 EUR
                     </span>
                     <span class="service-price-rub">
-                      от 1030 BYN
+                      2250 RUB
                     </span>                      
                   </div>
                 </a>
@@ -922,10 +922,10 @@
                   </div>
                   <div class="service-price-sum">                      
                     <span class="service-price-currency">
-                      от 13000 EUR
+                      355 EUR
                     </span>
                     <span class="service-price-rub">
-                      от 1070 BYN
+                      3440 RUB
                     </span>  
                   </div>
                 </a>
@@ -935,10 +935,10 @@
                   </div>
                   <div class="service-price-sum">                      
                     <span class="service-price-currency">
-                      от 130 EUR
+                      340 EUR
                     </span>
                     <span class="service-price-rub">
-                      от 1090 BYN
+                      32650 RUB
                     </span>  
                   </div>
                 </a>
@@ -948,10 +948,10 @@
                   </div>
                   <div class="service-price-sum">
                     <span class="service-price-currency">
-                      от 1300 EUR
+                      180 EUR
                     </span>
                     <span class="service-price-rub">
-                      от 1070 BYN
+                      1720 RUB
                     </span>  
                   </div>
                 </a>
@@ -961,10 +961,10 @@
                   </div>
                   <div class="service-price-sum">
                     <span class="service-price-currency">
-                      от 1300 EUR
+                      25-70 EUR
                     </span>
                     <span class="service-price-rub">
-                      от 1070 BYN
+                      2400-2600 RUB
                     </span>  
                   </div>
                 </a>
@@ -974,10 +974,10 @@
                   </div>
                   <div class="service-price-sum">
                     <span class="service-price-currency">
-                      от 1300 EUR
+                      340-480 EUR
                     </span>
                     <span class="service-price-rub">
-                      от 1070 BYN
+                      32650-46400 RUB
                     </span>  
                   </div>
                 </a>
@@ -1028,10 +1028,10 @@
                   </div>
                   <div class="service-price-sum">
                     <span class="service-price-currency">
-                      от 1300 EUR
+                      от 13007 EUR
                     </span>
                     <span class="service-price-rub">
-                      от 1070 BYN
+                      от 107065 BYN
                     </span>  
                   </div>
                 </a>
@@ -1041,10 +1041,10 @@
                   </div>
                   <div class="service-price-sum">
                     <span class="service-price-currency">
-                      от 1300 EUR
+                      от 130 EUR
                     </span>
                     <span class="service-price-rub">
-                      от 1070 BYN
+                      от 107 BYN
                     </span>  
                   </div>
                 </a>
@@ -1054,10 +1054,10 @@
                   </div>
                   <div class="service-price-sum">
                     <span class="service-price-currency">
-                      от 1300 EUR
+                      от 130099 EUR
                     </span>
                     <span class="service-price-rub">
-                      от 1070 BYN
+                      от 107099 BYN
                     </span>  
                   </div>
                 </a>
@@ -1067,10 +1067,10 @@
                   </div>
                   <div class="service-price-sum">
                     <span class="service-price-currency">
-                      от 1300 EUR
+                      от 1 EUR
                     </span>
                     <span class="service-price-rub">
-                      от 1070 BYN
+                      от 10 BYN
                     </span>  
                   </div>
                 </a>
