--- a/src/about.html
+++ b/src/about.html
@@ -452,14 +452,15 @@
 
     <!-- main screen start -->
     <main class="main">
-      <section class="section-prepage section-about">
-        <!-- <img src="./images/about-bg.jpg" alt="slider" class="prepage-bg" loading="lazy"> -->
-        <picture>
-          <source srcset="./images/about-bg.jpg" media="(min-width: 769px)">
-          <img src="./images/about-bg__mobile.jpg" alt="alt" loading="lazy" class="prepage-bg" />
-        </picture>
+      <section class="section-prepage section-about section-banner">       
+        <div class="section-banner-bg">
+          <img src="./images/article-bg-2.jpg" alt="bg" loading="lazy">
+        </div>
+        <div class="section-banner-photo section-banner-photo__about">
+          <img src="images/about-img.png" alt="alt" loading="lazy">
+        </div>      
         <div class="container">
-          <div class="prepage-content">
+          <div class="prepage-content prepage-content__wild-mobile">
             <div class="prepage-title">
               О Клинике
             </div>
