--- a/src/pages.html
+++ b/src/pages.html
@@ -510,6 +510,9 @@
           <li>
             <a href="searchResults.html">Результаты поиска</a>
           </li>
+          <li>
+            <a href="error.html">404</a>
+          </li>
         </ul>
 
         <h3>Попапы</h3>
