--- a/src/error.html
+++ b/src/error.html
@@ -27,8 +27,10 @@
 
 
   <link rel=" shortcut icon" href="./images/favicon.png" type="image/x-icon">
+
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.3/dist/jquery.validate.min.js"></script>
+
 
 </head>
 
@@ -451,81 +453,19 @@
     <!-- header end -->
 
     <!-- main screen start -->
-    <main class="main">
-      <div class="container">
-        <br><br><br>
-        <h3>Страницы</h3>
-        <ul>
-          <li>
-            <a href="index.html">Главная(готово. Женя проверял)</a>
-          </li>
-          <li>
-            <a href="prices.html">Цены(готово)</a>
-          </li>
-          <li>
-            <a href="doctors.html">Врачи(готово)</a>
-          </li>
-          <li>
-            <a href="doctor.html">Врач(готово)</a>
-          </li>
-          <li>
-            <a href="about.html">О нас (готово. Женя проверял)</a>
-          </li>
-          <li>
-            <a href="examples.html">Работы(готово)</a>
-          </li>
-          <li>
-            <a href="implantation.html">Имплантация зубов(готово)</a>
-          </li>
-          <li>
-            <a href="implantation-2.html">Имплантация зубов 2 (готово)</a>
-          </li>
-          <li>
-            <a href="wisdomTeeth.html">Удаление зубов мудрости(готово)</a>
-          </li>
-          <li>
-            <a href="articles.html">Статьи(готово)</a>
-          </li>
-          <li>
-            <a href="acticleDetail.html">Статья(готово)</a>
-          </li>
-          <li>
-            <a href="services.html">Все услуги(готово)</a>
-          </li>
-          <li>
-            <a href="contacts.html">Контакты(готово)</a>
-          </li>
-          <li>
-            <a href="vacancies.html">Вакансии(готово)</a>
-          </li>
-          <li>
-            <a href="reviews.html">Отзывы(готово)</a>
-          </li>
-          <li>
-            <a href="equipment.html">Оборудование</a>
-          </li>
-          <li>
-            <a href="foreign.html">Для иностранных граждан</a>
-          </li>
-          <li>
-            <a href="searchResults.html">Результаты поиска</a>
-          </li>
-          <li>
-            <a href="error.html">404</a>
-          </li>
-        </ul>
-
-        <h3>Попапы</h3>
-        <ul>
-          <li><a href="javascript:void(0)" class="mfp-link" data-href="./popups/popup-appointment.html">Форма обратной связи</a></li>
-          <li><a href="javascript:void(0)" class="mfp-link" data-href="./popups/popup-success.html">Успешная отправка</a></li>  
-        </ul>
+    <main class="main">      
+      <div class="section-error">
+        <div class="container">
+          <h1 class="h1 section-error-title">
+            404
+          </h1>
+          <div class="section-error-text">
+            Страница не найдена
+          </div>
+        </div>
       </div>
-      <br><br><br>
     </main>
     <!-- main screen end -->
-
-
 
     <!-- footer start -->
     <footer class="footer">
@@ -674,7 +614,6 @@
       </div>
     </footer>
     <!-- footer end -->
-
     <!-- mobile nav start -->
     <div class="mobile-nav">
       <div class="mobile-nav-info">
