--- a/public/foreign.html
+++ b/public/foreign.html
@@ -3212,7 +3212,7 @@
             <div class="contacts-acide-wrapper">
               <div class="contacts-acide acide">
                 <div class="feedback-wrapper">
-                    <div class="feedback-title feedback-title__foreign">
+                    <div class="feedback-title h3">
                         записаться на онлайн-консультацию
                     </div>
                     <form class="feedback-form feedback-form__foreign" id="acide-appointment">
