feedback forms changes

--- a/public/pages.html
+++ b/public/pages.html
@@ -513,12 +513,27 @@
           <li>
             <a href="error.html">404</a>
           </li>
+        </ul>        
+        <hr>
+        <ul>
+          <li>
+            <li>
+              <a href="foreign-new.html">Для иностранных граждан(new)</a>
+            </li>
+          </li>
         </ul>
+        <br><br>
 
         <h3>Попапы</h3>
         <ul>
           <li><a href="javascript:void(0)" class="mfp-link" data-href="./popups/popup-appointment.html">Форма обратной связи</a></li>
           <li><a href="javascript:void(0)" class="mfp-link" data-href="./popups/popup-success.html">Успешная отправка</a></li>  
+        </ul>
+        <hr>
+        <ul>
+          <li>
+            <a href="javascript:void(0)" class="mfp-link" data-href="./popups/popup-appointment-new.html">Форма обратной связи(new)</a>
+          </li>            
         </ul>
       </div>
       <br><br><br>
