--- a/src/index.html
+++ b/src/index.html
@@ -617,6 +617,9 @@
 
       <div class="benefits bg-blue">       
         <div class="container">
+          <h1 class="section-title">
+            Стоматология «Дентополис»
+          </h1>
           <div class="row">
             <div class="col-sm-3 col-us-6">
               <div class="benefits-item">
