fix article list

--- a/public/implantation-2.html
+++ b/public/implantation-2.html
@@ -493,11 +493,11 @@
             <div class="service-main-wrapper">
               <article>
                 <p>
-                  Дентальная имплантация зубов — современный и абсолютно безболезненный метод восстановления зубного ряда,
+                  <a href="#">Дентальная имплантация зубов</a> — современный и абсолютно безболезненный метод восстановления зубного ряда,
                   подразумевающий вживление в челюсть титанового штифта и последующую установку коронки.
                 </p>
                 <p>
-                  Несмотря на более высокую стоимость, имплантация зубов уверенно вытесняет классический метод зубопротезирования.
+                  Несмотря на более высокую стоимость, <a href="#">имплантация</a> зубов уверенно вытесняет классический метод зубопротезирования.
                   Поскольку не нужно обтачивать соседние здоровые зубы и удалять в них нервы, исключен риск их потери.
                 </p>
                 <h4>
@@ -535,17 +535,52 @@
                     По внешнему виду зубные имплантаты идентичны настоящим зубам;
                   </li>
                   <li>                   
-                    Протезирование позволяет полностью восстановить жевательную функцию;                    
+                    Протезирование позволяет полностью восстановить жевательную функцию;
+                    <ul class="ui-list ui-list-check">
+                      <li>
+                        Здоровые соседние зубы остаются нетронутыми;
+                      </li>
+                      <li>
+                        Уход за имплантированными зубами не сложнее, чем за живыми. Срок службы дентальных имплантов,
+                        по результатам исследования Американской ассоциации имплантологов, в среднем в 2 раза превышает срок службы депульпированного зуба.; 
+                        <ul class="ui-list ui-list-check">
+                          <li>
+                            Атрофия костной ткани, не позволяющая изготовить качественный съемный протез. 
+                          </li>
+                          <li>
+                            Непереносимость съемных протезов (повышенная чувствительность к акрилату, который является их основным компонентом); 
+                          </li>
+                        </ul>  
+                      </li>
+                    </ul>                
                   </li>
                   <li>                   
                     Операция безболезненна для пациента, поскольку проводится под анестезией;                    
                   </li>
                   <li>                    
-                    Здоровые соседние зубы остаются нетронутыми;                    
+                    Здоровые соседние зубы остаются нетронутыми;
+                    <ul class="ui-list ui-list-plus">
+                      <li>
+                        Здоровые соседние зубы остаются нетронутыми;
+                      </li>
+                      <li>
+                        Уход за имплантированными зубами не сложнее, чем за живыми. Срок службы дентальных имплантов,
+                        по результатам исследования Американской ассоциации имплантологов, в среднем в 2 раза превышает срок службы депульпированного зуба.; 
+                      </li>
+                    </ul>                     
                   </li>
                   <li>                      
                     Уход за имплантированными зубами не сложнее, чем за живыми. Срок службы дентальных имплантов,
-                    по результатам исследования Американской ассоциации имплантологов, в среднем в 2 раза превышает срок службы депульпированного зуба.;                      
+                    по результатам исследования Американской ассоциации имплантологов, в среднем в 2 раза превышает срок службы депульпированного зуба.;  
+                    <ul class="ui-list ui-list-cross">
+                      <li>
+                        Здоровые соседние зубы остаются нетронутыми;
+                      </li>
+                      <li>
+                        Уход за имплантированными зубами не сложнее, чем за живыми. Срок службы дентальных имплантов,
+                        по результатам исследования Американской ассоциации имплантологов, в среднем в 2 раза превышает срок службы депульпированного зуба.; 
+                      </li>
+                    </ul>                       
                   </li>           
                 </ul>
                 <h4>
