--- a/public/foreign-new.html
+++ b/public/foreign-new.html
@@ -1610,7 +1610,7 @@
                   Записаться
                 </button>
                 <label class="feedback-form-agree">
-                  <input type="checkbox" class="ui-input checkbox">
+                  <input type="checkbox" class="ui-input checkbox" name="agreeForm" id="agreeForm">
                   <span class="feedback-form-agree">Даю согласие на обработку данных и соглашаюсь с политикой конфиденциальности</span>
                 </label>
               </div>
@@ -1633,11 +1633,15 @@
               number: {
                 required: true,     
                 number: false 
-              },               
+              },
+              agreeForm: {
+                required: true,
+              },              
             },
             messages: {
               name: "Пожалуйста, заполните это поле",             
-              number: "Пожалуйста, заполните это поле",              
+              number: "Пожалуйста, заполните это поле", 
+              agreeForm: "",              
             }
           });  
         });
